feat : create api successfull done and exception is configured
